# eigengrad

./: CMakeLists.txt  README.md
example/cpp/: CMakeLists.txt  demo.cc
src/: CMakeLists.txt  Eigengrad.hh  Log.hh  Mat.cc  Mat.hh
